@@ -3,6 +3,7 @@
 2008-12-16  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/doc_manager.rb:  Set title for generated documentation.
+	* lib/rubygems/dependency.rb:  Make #=~ work with Gem::Specification.
 
 2008-12-15  Eric Hodel  <drbrain@segment7.net>
 
